Fixed scrollbar height when show msrp popup

--- a/web/css/components/_dialog.less
+++ b/web/css/components/_dialog.less
@@ -7,6 +7,7 @@
 
             .action.close {
                 &:extend(.button-x all);
+                position: absolute;
                 z-index: 41;
                 .right(@2);
                 top: @2;
